[package]
name = "gargantua"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.18", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
egui = "0.27"
egui-wgpu = "0.27"
egui-winit = "0.27"
image = { version = "0.25", default-features = false, features = ["png"] }
pollster = "0.3"
wgpu = "0.19"
winit = "0.29"
